@@ -27,6 +27,7 @@ BUG FIXES:
 +Fix bug in updating status after a conrol object was already deleted
 +Fix bug related to ? being in keyword helper lists for some languages
 +Handle invalid regular expressions in find dialog
++Fix a number of bugs in the new Find All search features
 
 #-----------------------------------------------------------------------------#
 
